// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FooterLinks
    facebookLink=""
    footerLinks={
        Object {
            "facebookLink": "/foo",
            "instagramLink": "/foo",
            "twitterLink": "/foo",
          }
    }
    instagramLink=""
    twitterLink=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="text-white nowrap block-headline"
>
          We would love to talk!
</h2>,
        <div
          className="my3 flex"
>
          <Button
                    className="nowrap"
                    color="white-madison-blue"
                    disabled={false}
                    exact={true}
                    fullWidth={false}
                    label="Contact Us"
                    onClick={[Function]}
                    shadow={true}
                    to="/contact"
                    type="button"
                    variant="primary"
          />
          <Image
                    alt="Decorative left down arrow icon"
                    bg={false}
                    className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                    onImgLoad={[Function]}
                    src="/assets/images/arrow-left-down.svg"
                    style={Object {}}
          />
</div>,
        <div
          className="mt2"
>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href="/foo"
                              rel="noopener"
                              target="_blank"
                    >
                              Instagram
                    </a>
          </div>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href="/foo"
                              rel="noopener"
                              target="_blank"
                    >
                              Twitter
                    </a>
          </div>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href="/foo"
                              rel="noopener"
                              target="_blank"
                    >
                              Facebook
                    </a>
          </div>
</div>,
      ],
      "className": "col-3 flex flex-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "We would love to talk!",
          "className": "text-white nowrap block-headline",
        },
        "ref": null,
        "rendered": "We would love to talk!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              className="nowrap"
              color="white-madison-blue"
              disabled={false}
              exact={true}
              fullWidth={false}
              label="Contact Us"
              onClick={[Function]}
              shadow={true}
              to="/contact"
              type="button"
              variant="primary"
/>,
            <Image
              alt="Decorative left down arrow icon"
              bg={false}
              className="arrow mx3 medium-down-display-none xs-hide sm-hide"
              onImgLoad={[Function]}
              src="/assets/images/arrow-left-down.svg"
              style={Object {}}
/>,
          ],
          "className": "my3 flex",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "className": "nowrap",
              "color": "white-madison-blue",
              "disabled": false,
              "exact": true,
              "fullWidth": false,
              "label": "Contact Us",
              "onClick": [Function],
              "shadow": true,
              "to": "/contact",
              "type": "button",
              "variant": "primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "Decorative left down arrow icon",
              "bg": false,
              "children": null,
              "className": "arrow mx3 medium-down-display-none xs-hide sm-hide",
              "onImgLoad": [Function],
              "src": "/assets/images/arrow-left-down.svg",
              "style": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href="/foo"
                            rel="noopener"
                            target="_blank"
              >
                            Instagram
              </a>
</div>,
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href="/foo"
                            rel="noopener"
                            target="_blank"
              >
                            Twitter
              </a>
</div>,
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href="/foo"
                            rel="noopener"
                            target="_blank"
              >
                            Facebook
              </a>
</div>,
          ],
          "className": "mt2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href="/foo"
                  rel="noopener"
                  target="_blank"
>
                  Instagram
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Instagram",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "/foo",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Instagram",
                "type": "a",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href="/foo"
                  rel="noopener"
                  target="_blank"
>
                  Twitter
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Twitter",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "/foo",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Twitter",
                "type": "a",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href="/foo"
                  rel="noopener"
                  target="_blank"
>
                  Facebook
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Facebook",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "/foo",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Facebook",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="text-white nowrap block-headline"
>
            We would love to talk!
</h2>,
          <div
            className="my3 flex"
>
            <Button
                        className="nowrap"
                        color="white-madison-blue"
                        disabled={false}
                        exact={true}
                        fullWidth={false}
                        label="Contact Us"
                        onClick={[Function]}
                        shadow={true}
                        to="/contact"
                        type="button"
                        variant="primary"
            />
            <Image
                        alt="Decorative left down arrow icon"
                        bg={false}
                        className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                        onImgLoad={[Function]}
                        src="/assets/images/arrow-left-down.svg"
                        style={Object {}}
            />
</div>,
          <div
            className="mt2"
>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href="/foo"
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Instagram
                        </a>
            </div>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href="/foo"
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Twitter
                        </a>
            </div>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href="/foo"
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Facebook
                        </a>
            </div>
</div>,
        ],
        "className": "col-3 flex flex-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "We would love to talk!",
            "className": "text-white nowrap block-headline",
          },
          "ref": null,
          "rendered": "We would love to talk!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                className="nowrap"
                color="white-madison-blue"
                disabled={false}
                exact={true}
                fullWidth={false}
                label="Contact Us"
                onClick={[Function]}
                shadow={true}
                to="/contact"
                type="button"
                variant="primary"
/>,
              <Image
                alt="Decorative left down arrow icon"
                bg={false}
                className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                onImgLoad={[Function]}
                src="/assets/images/arrow-left-down.svg"
                style={Object {}}
/>,
            ],
            "className": "my3 flex",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "nowrap",
                "color": "white-madison-blue",
                "disabled": false,
                "exact": true,
                "fullWidth": false,
                "label": "Contact Us",
                "onClick": [Function],
                "shadow": true,
                "to": "/contact",
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Decorative left down arrow icon",
                "bg": false,
                "children": null,
                "className": "arrow mx3 medium-down-display-none xs-hide sm-hide",
                "onImgLoad": [Function],
                "src": "/assets/images/arrow-left-down.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href="/foo"
                                rel="noopener"
                                target="_blank"
                >
                                Instagram
                </a>
</div>,
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href="/foo"
                                rel="noopener"
                                target="_blank"
                >
                                Twitter
                </a>
</div>,
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href="/foo"
                                rel="noopener"
                                target="_blank"
                >
                                Facebook
                </a>
</div>,
            ],
            "className": "mt2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href="/foo"
                    rel="noopener"
                    target="_blank"
>
                    Instagram
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Instagram",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "/foo",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Instagram",
                  "type": "a",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href="/foo"
                    rel="noopener"
                    target="_blank"
>
                    Twitter
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Twitter",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "/foo",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Twitter",
                  "type": "a",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href="/foo"
                    rel="noopener"
                    target="_blank"
>
                    Facebook
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Facebook",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "/foo",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Facebook",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FooterLinks
    facebookLink=""
    instagramLink=""
    twitterLink=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="text-white nowrap block-headline"
>
          We would love to talk!
</h2>,
        <div
          className="my3 flex"
>
          <Button
                    className="nowrap"
                    color="white-madison-blue"
                    disabled={false}
                    exact={true}
                    fullWidth={false}
                    label="Contact Us"
                    onClick={[Function]}
                    shadow={true}
                    to="/contact"
                    type="button"
                    variant="primary"
          />
          <Image
                    alt="Decorative left down arrow icon"
                    bg={false}
                    className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                    onImgLoad={[Function]}
                    src="/assets/images/arrow-left-down.svg"
                    style={Object {}}
          />
</div>,
        <div
          className="mt2"
>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href=""
                              rel="noopener"
                              target="_blank"
                    >
                              Instagram
                    </a>
          </div>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href=""
                              rel="noopener"
                              target="_blank"
                    >
                              Twitter
                    </a>
          </div>
          <div
                    className="my3 flex items-center"
          >
                    <Image
                              alt="Instagram icon"
                              bg={false}
                              className="icon"
                              onImgLoad={[Function]}
                              src="/assets/images/bubble-icon.svg"
                              style={Object {}}
                    />
                    <a
                              className="bold text-white text-decoration-none ml3"
                              href=""
                              rel="noopener"
                              target="_blank"
                    >
                              Facebook
                    </a>
          </div>
</div>,
      ],
      "className": "col-3 flex flex-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "We would love to talk!",
          "className": "text-white nowrap block-headline",
        },
        "ref": null,
        "rendered": "We would love to talk!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              className="nowrap"
              color="white-madison-blue"
              disabled={false}
              exact={true}
              fullWidth={false}
              label="Contact Us"
              onClick={[Function]}
              shadow={true}
              to="/contact"
              type="button"
              variant="primary"
/>,
            <Image
              alt="Decorative left down arrow icon"
              bg={false}
              className="arrow mx3 medium-down-display-none xs-hide sm-hide"
              onImgLoad={[Function]}
              src="/assets/images/arrow-left-down.svg"
              style={Object {}}
/>,
          ],
          "className": "my3 flex",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "className": "nowrap",
              "color": "white-madison-blue",
              "disabled": false,
              "exact": true,
              "fullWidth": false,
              "label": "Contact Us",
              "onClick": [Function],
              "shadow": true,
              "to": "/contact",
              "type": "button",
              "variant": "primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "Decorative left down arrow icon",
              "bg": false,
              "children": null,
              "className": "arrow mx3 medium-down-display-none xs-hide sm-hide",
              "onImgLoad": [Function],
              "src": "/assets/images/arrow-left-down.svg",
              "style": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href=""
                            rel="noopener"
                            target="_blank"
              >
                            Instagram
              </a>
</div>,
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href=""
                            rel="noopener"
                            target="_blank"
              >
                            Twitter
              </a>
</div>,
            <div
              className="my3 flex items-center"
>
              <Image
                            alt="Instagram icon"
                            bg={false}
                            className="icon"
                            onImgLoad={[Function]}
                            src="/assets/images/bubble-icon.svg"
                            style={Object {}}
              />
              <a
                            className="bold text-white text-decoration-none ml3"
                            href=""
                            rel="noopener"
                            target="_blank"
              >
                            Facebook
              </a>
</div>,
          ],
          "className": "mt2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href=""
                  rel="noopener"
                  target="_blank"
>
                  Instagram
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Instagram",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Instagram",
                "type": "a",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href=""
                  rel="noopener"
                  target="_blank"
>
                  Twitter
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Twitter",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Twitter",
                "type": "a",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt="Instagram icon"
                  bg={false}
                  className="icon"
                  onImgLoad={[Function]}
                  src="/assets/images/bubble-icon.svg"
                  style={Object {}}
/>,
                <a
                  className="bold text-white text-decoration-none ml3"
                  href=""
                  rel="noopener"
                  target="_blank"
>
                  Facebook
</a>,
              ],
              "className": "my3 flex items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Instagram icon",
                  "bg": false,
                  "children": null,
                  "className": "icon",
                  "onImgLoad": [Function],
                  "src": "/assets/images/bubble-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Facebook",
                  "className": "bold text-white text-decoration-none ml3",
                  "href": "",
                  "rel": "noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Facebook",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="text-white nowrap block-headline"
>
            We would love to talk!
</h2>,
          <div
            className="my3 flex"
>
            <Button
                        className="nowrap"
                        color="white-madison-blue"
                        disabled={false}
                        exact={true}
                        fullWidth={false}
                        label="Contact Us"
                        onClick={[Function]}
                        shadow={true}
                        to="/contact"
                        type="button"
                        variant="primary"
            />
            <Image
                        alt="Decorative left down arrow icon"
                        bg={false}
                        className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                        onImgLoad={[Function]}
                        src="/assets/images/arrow-left-down.svg"
                        style={Object {}}
            />
</div>,
          <div
            className="mt2"
>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href=""
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Instagram
                        </a>
            </div>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href=""
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Twitter
                        </a>
            </div>
            <div
                        className="my3 flex items-center"
            >
                        <Image
                                    alt="Instagram icon"
                                    bg={false}
                                    className="icon"
                                    onImgLoad={[Function]}
                                    src="/assets/images/bubble-icon.svg"
                                    style={Object {}}
                        />
                        <a
                                    className="bold text-white text-decoration-none ml3"
                                    href=""
                                    rel="noopener"
                                    target="_blank"
                        >
                                    Facebook
                        </a>
            </div>
</div>,
        ],
        "className": "col-3 flex flex-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "We would love to talk!",
            "className": "text-white nowrap block-headline",
          },
          "ref": null,
          "rendered": "We would love to talk!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                className="nowrap"
                color="white-madison-blue"
                disabled={false}
                exact={true}
                fullWidth={false}
                label="Contact Us"
                onClick={[Function]}
                shadow={true}
                to="/contact"
                type="button"
                variant="primary"
/>,
              <Image
                alt="Decorative left down arrow icon"
                bg={false}
                className="arrow mx3 medium-down-display-none xs-hide sm-hide"
                onImgLoad={[Function]}
                src="/assets/images/arrow-left-down.svg"
                style={Object {}}
/>,
            ],
            "className": "my3 flex",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "nowrap",
                "color": "white-madison-blue",
                "disabled": false,
                "exact": true,
                "fullWidth": false,
                "label": "Contact Us",
                "onClick": [Function],
                "shadow": true,
                "to": "/contact",
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Decorative left down arrow icon",
                "bg": false,
                "children": null,
                "className": "arrow mx3 medium-down-display-none xs-hide sm-hide",
                "onImgLoad": [Function],
                "src": "/assets/images/arrow-left-down.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href=""
                                rel="noopener"
                                target="_blank"
                >
                                Instagram
                </a>
</div>,
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href=""
                                rel="noopener"
                                target="_blank"
                >
                                Twitter
                </a>
</div>,
              <div
                className="my3 flex items-center"
>
                <Image
                                alt="Instagram icon"
                                bg={false}
                                className="icon"
                                onImgLoad={[Function]}
                                src="/assets/images/bubble-icon.svg"
                                style={Object {}}
                />
                <a
                                className="bold text-white text-decoration-none ml3"
                                href=""
                                rel="noopener"
                                target="_blank"
                >
                                Facebook
                </a>
</div>,
            ],
            "className": "mt2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href=""
                    rel="noopener"
                    target="_blank"
>
                    Instagram
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Instagram",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Instagram",
                  "type": "a",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href=""
                    rel="noopener"
                    target="_blank"
>
                    Twitter
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Twitter",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Twitter",
                  "type": "a",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt="Instagram icon"
                    bg={false}
                    className="icon"
                    onImgLoad={[Function]}
                    src="/assets/images/bubble-icon.svg"
                    style={Object {}}
/>,
                  <a
                    className="bold text-white text-decoration-none ml3"
                    href=""
                    rel="noopener"
                    target="_blank"
>
                    Facebook
</a>,
                ],
                "className": "my3 flex items-center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Instagram icon",
                    "bg": false,
                    "children": null,
                    "className": "icon",
                    "onImgLoad": [Function],
                    "src": "/assets/images/bubble-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Facebook",
                    "className": "bold text-white text-decoration-none ml3",
                    "href": "",
                    "rel": "noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Facebook",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
